# RAG

./: .dockerignore  .env  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
evaluation/: cosine_similarity_analysis.py  input_put_data.csv  rosberta_1_with_similarity.csv  rosberta_2_with_similarity.csv
evaluation/rater/: evaluate.py  rag_rater.py
my_app/: app.py  data_ingestion.py  embeddings.py  exceptions.py  file_processor.py  gradio_interface.py  llm_client.py  qdrant_client.py  search_service.py  text_splitter.py
news_db/: news_data.json
parser/: parser.py
qdrant_storage/: raft_state.json
tests/: input_test_data.csv  run_csv_test.py
tests/results/: hf.co_t-tech_T-pro-it-1.0-Q4_K_M-GGUF_Q4_K_M_ai-forever_ru-en-RoSBERTa_results.csv
