[tool.poetry]
name = "retrieval-augmented-generation"
version = "0.1.0"
description = "description"
authors = ["Samix"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
gradio = "^4.44.1"
qdrant-client = "^1.6.2"
sentence-transformers = "^3.0.0"
rank_bm25 = "^0.2.1"
PyPDF2 = "^3.0.1"
python-docx = "^0.8.11"
chardet = "^5.1.0"
torch = {version = "^2.2.2", extras = ["cu118"]}
accelerate = "^0.29.0"
transformers = "^4.38.0"
numpy = "^1.26.4"
pandas = "^2.2.1"
httpx = "^0.27.0"
python-multipart = "^0.0.9"
natasha = "^1.5.0"
pydantic-settings = "^2.2.1"

[tool.poetry.dev-dependencies]
black = "^23.9.1"
isort = "^5.12.0"
flake8 = "^6.1.0"
pylint = "^3.0.0"
pre-commit = "^3.4.0"
pytest = "^8.1.1"
types-requests = "^2.31.0"
mypy = "^1.10.0"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = [
    "E203",
    "W503",
]

[tool.pylint.'MESSAGES CONTROL']
disable = [
    "C0114",  # Missing module docstring
    "C0115",  # Missing class docstring
    "C0116",  # Missing function or method docstring
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
